[gd_scene load_steps=35 format=3 uid="uid://b7yu7e63hwkml"]

[ext_resource type="PackedScene" uid="uid://djd0edge80xai" path="res://characters/_base/character/quiver_base_character.tscn" id="1_4jcfv"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/ground_actions/move_actions/quiver_action_follow.gd" id="2_py5s2"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/quiver_enemy_character.gd" id="2_qirqt"]
[ext_resource type="Resource" uid="uid://fvhi7j4yexx8" path="res://characters/enemies/evil_chad/resources/evil_chad_attributes.tres" id="2_qsegb"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/quiver_action_ground.gd" id="3_bg7yk"]
[ext_resource type="PackedScene" uid="uid://bo8dphuo7nlit" path="res://characters/enemies/evil_chad/evil_chad_skin.tscn" id="3_vi02f"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/ground_actions/quiver_action_move.gd" id="4_120xx"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/ground_actions/move_actions/quiver_action_idle_ai.gd" id="5_y1loh"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/quiver_action_attack.gd" id="8_lnplq"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/ground_actions/quiver_action_recovery.gd" id="9_1sdn1"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/ground_actions/quiver_action_hurt.gd" id="10_pd0sh"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/quiver_action_air.gd" id="10_xyisi"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/air_actions/quiver_action_jump.gd" id="11_3lfsa"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/air_actions/jump_actions/quiver_action_impulse.gd" id="11_rp4h6"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/air_actions/jump_actions/quiver_action_air_attack.gd" id="12_lphyp"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/ground_actions/quiver_action_grabbed.gd" id="12_mkt3g"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/air_actions/jump_actions/quiver_action_mid_air.gd" id="12_ocdi3"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/utilities/custom_nodes/quiver_debug_property_label.gd" id="13_b2qfj"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/air_actions/jump_actions/quiver_action_landing.gd" id="13_fwo3l"]
[ext_resource type="Script" path="res://characters/enemies/evil_chad/evil_chad_ai.gd" id="13_vcgxt"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/ai/states/quiver_ai_chase_closest_player.gd" id="14_nuwmn"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/utilities/custom_nodes/state_machines/quiver_state_sequence.gd" id="15_cerch"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/ai/states/quiver_ai_call_action.gd" id="16_ooocb"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/air_actions/quiver_action_knockout.gd" id="16_qxasc"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/air_actions/knockout_actions/quiver_action_launch.gd" id="17_7c3ib"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/ai/states/quiver_ai_wait.gd" id="17_v4twd"]
[ext_resource type="Script" path="res://characters/enemies/evil_chad/debug_scripts/StateMachineDebugLabel.gd" id="18_fdici"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/air_actions/knockout_actions/quiver_action_mid_air.gd" id="18_qqgma"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/air_actions/knockout_actions/quiver_action_bounce.gd" id="19_3vdef"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/ground_actions/quiver_action_die_ai.gd" id="21_1aui6"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/ai/states/quiver_ai_go_to_position.gd" id="24_6l3lj"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/ai/states/quiver_ai_wait_for_state.gd" id="29_ojglc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_787ts"]
radius = 20.0
height = 204.0

[sub_resource type="Theme" id="Theme_gg7jm"]
Label/colors/font_color = Color(0.101961, 0.0117647, 0.415686, 1)

[node name="EvilChad" groups=["enemies"] instance=ExtResource("1_4jcfv")]
script = ExtResource("2_qirqt")
_attributes = ExtResource("2_qsegb")
_path_skin = NodePath("EvilChadSkin")
_path_ai_state_machine = NodePath("AiStateMachine")

[node name="Collision" type="CollisionShape2D" parent="." index="0"]
modulate = Color(0, 0.6, 0.701961, 1)
position = Vector2(1, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_787ts")
metadata/collision_type = "default"

[node name="EvilChadSkin" parent="." index="1" instance=ExtResource("3_vi02f")]
position = Vector2(0, 0)

[node name="StateMachine" parent="." index="2"]
initial_state = NodePath("Ground/Move/Idle")
should_process_input = false

[node name="Ground" type="Node" parent="StateMachine" index="0"]
script = ExtResource("3_bg7yk")
path_hurt = "Ground/Hurt"
path_knockout = "Air/Knockout/Launch"
path_grabbed = "Ground/Grabbed"

[node name="Move" type="Node" parent="StateMachine/Ground" index="0"]
script = ExtResource("4_120xx")
path_jump_state = "Air/Jump/JumpImpulse"
path_attack_state = "Ground/Combo1"

[node name="Idle" type="Node" parent="StateMachine/Ground/Move" index="0"]
script = ExtResource("5_y1loh")
skin_state = &"idle"

[node name="Follow" type="Node" parent="StateMachine/Ground/Move" index="1"]
script = ExtResource("2_py5s2")
ARRIVE_RANGE = 30
skin_state = &"walk"
path_next_state = "Ground/Move/Idle"

[node name="Combo1" type="Node" parent="StateMachine/Ground" index="1"]
script = ExtResource("8_lnplq")
skin_state = &"attack1"
can_combo = true
path_combo_state = "Ground/Combo2"
path_next_state = "Ground/Move/Idle"
should_enter_parent = true
should_exit_parent = true

[node name="Combo2" type="Node" parent="StateMachine/Ground" index="2"]
script = ExtResource("8_lnplq")
skin_state = &"attack2"
can_combo = false
path_next_state = "Ground/Move/Idle"
should_enter_parent = true
should_exit_parent = true

[node name="Recovery" type="Node" parent="StateMachine/Ground" index="3"]
script = ExtResource("9_1sdn1")
skin_state = &"knockout_ground"
path_idle_state = "Ground/Move/Idle"

[node name="Hurt" type="Node" parent="StateMachine/Ground" index="4"]
script = ExtResource("10_pd0sh")
skin_state_mid = &"hurt_mid"
skin_state_high = &"hurt_high"
path_idle_state = "Ground/Move/Idle"

[node name="Grabbed" type="Node" parent="StateMachine/Ground" index="5"]
script = ExtResource("12_mkt3g")
escape_delay = 5.0
skin_state = &"grabbed"
path_next_state = "Air/Jump/MidAir"

[node name="Air" type="Node" parent="StateMachine" index="1"]
script = ExtResource("10_xyisi")

[node name="Jump" type="Node" parent="StateMachine/Air" index="0"]
script = ExtResource("11_3lfsa")
path_landing = "Air/Jump/Landing"
path_knockout = "Air/Knockout/Launch"

[node name="Attack" type="Node" parent="StateMachine/Air/Jump" index="0"]
script = ExtResource("12_lphyp")
skin_state = &"air_attack"
path_falling_state = "Air/Jump/MidAir"

[node name="JumpImpulse" type="Node" parent="StateMachine/Air/Jump" index="1"]
script = ExtResource("11_rp4h6")
skin_state = &"jump"
path_next_state = "Air/Jump/MidAir"

[node name="MidAir" type="Node" parent="StateMachine/Air/Jump" index="2"]
script = ExtResource("12_ocdi3")
skin_state_rising = &"rising"
skin_state_falling = &"falling"
can_attack = true
path_air_attack = "Air/Jump/Attack"

[node name="Landing" type="Node" parent="StateMachine/Air/Jump" index="3"]
script = ExtResource("13_fwo3l")
skin_state = &"landing"
path_idle = "Ground/Move/Idle"
path_walk = "Ground/Move/Follow"

[node name="Knockout" type="Node" parent="StateMachine/Air" index="1"]
script = ExtResource("16_qxasc")
path_bounce = "Air/Knockout/Bounce"
_path_launch = "Air/Knockout/Launch"

[node name="Launch" type="Node" parent="StateMachine/Air/Knockout" index="0"]
script = ExtResource("17_7c3ib")
skin_state_launch = &"knockout_launch"
skin_state_rising = &"knockout_rising"
path_next_state = "Air/Knockout/MidAir"

[node name="MidAir" type="Node" parent="StateMachine/Air/Knockout" index="1"]
script = ExtResource("18_qqgma")
skin_state_rising = &"knockout_rising"
skin_state_falling = &"knockout_falling"

[node name="Bounce" type="Node" parent="StateMachine/Air/Knockout" index="2"]
script = ExtResource("19_3vdef")
skin_state = &"knockout_bounce"
path_air_mid_air = "Air/Knockout/MidAir"
path_ground_recovery = "Ground/Recovery"
path_die = "Die"

[node name="Die" type="Node" parent="StateMachine" index="2"]
script = ExtResource("21_1aui6")
skin_state = &"die"

[node name="AiStateMachine" type="Node" parent="." index="3"]
script = ExtResource("13_vcgxt")
initial_state = NodePath("Wait")
should_process_input = false
ai_state_hurt = "WaitTillIdle"
ai_state_after_reset = "Wait"

[node name="Chase" type="Node" parent="AiStateMachine" index="0"]
script = ExtResource("15_cerch")

[node name="ChaseClosestPlayer" type="Node" parent="AiStateMachine/Chase" index="0"]
script = ExtResource("14_nuwmn")
_max_chase_time = 5.0
path_follow_state = "Ground/Move/Follow"

[node name="QuiverAiWait" type="Node" parent="AiStateMachine/Chase" index="1"]
script = ExtResource("17_v4twd")
wait_time = 0.2

[node name="GoToPosition" type="Node" parent="AiStateMachine" index="1"]
script = ExtResource("24_6l3lj")
path_follow_state = "Ground/Move/Follow"

[node name="Attack" type="Node" parent="AiStateMachine" index="2"]
script = ExtResource("15_cerch")

[node name="Punch" type="Node" parent="AiStateMachine/Attack" index="0"]
script = ExtResource("16_ooocb")
state_path = "Ground/Combo1"
message = {}

[node name="Wait" type="Node" parent="AiStateMachine/Attack" index="1"]
script = ExtResource("17_v4twd")
wait_time = 0.5

[node name="Punch2" type="Node" parent="AiStateMachine/Attack" index="2"]
script = ExtResource("16_ooocb")
state_path = "Ground/Combo1"
message = {
"auto_combo": true
}

[node name="Kick" type="Node" parent="AiStateMachine/Attack" index="3"]
script = ExtResource("16_ooocb")
state_path = "Ground/Combo2"
message = {}

[node name="Wait" type="Node" parent="AiStateMachine" index="3"]
script = ExtResource("17_v4twd")
wait_time = 3.0

[node name="WaitTillIdle" type="Node" parent="AiStateMachine" index="4"]
script = ExtResource("29_ojglc")
path_ready_state = "Ground/Move/Idle"

[node name="DebugLabels" type="VBoxContainer" parent="." index="4"]
offset_left = -168.0
offset_top = -442.0
offset_right = 168.0
offset_bottom = -392.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_gg7jm")
theme_override_constants/separation = 0
metadata/_edit_use_custom_anchors = true

[node name="Chad" type="Label" parent="DebugLabels" index="0"]
offset_right = 336.0
offset_bottom = 23.0
script = ExtResource("13_b2qfj")
path_reference = NodePath("../..")
properties = PackedStringArray("velocity")

[node name="StateMachine" type="Label" parent="DebugLabels" index="1"]
offset_top = 23.0
offset_right = 336.0
offset_bottom = 46.0
script = ExtResource("18_fdici")
path_reference = NodePath("../../StateMachine")
properties = PackedStringArray("state_name")

[node name="Combo1" type="Label" parent="DebugLabels" index="2"]
offset_top = 46.0
offset_right = 336.0
offset_bottom = 69.0
script = ExtResource("13_b2qfj")
path_reference = NodePath("../../StateMachine/Ground/Combo1")
properties = PackedStringArray("_should_combo")

[node name="AIState" type="Label" parent="DebugLabels" index="3"]
offset_top = 69.0
offset_right = 336.0
offset_bottom = 92.0
script = ExtResource("13_b2qfj")
path_reference = NodePath("../../AiStateMachine")
properties = PackedStringArray("state_name", "_state_to_resume")
